# Win32-Tinatic-MDI

./: .gitignore  CMakeLists.txt  README.md  run.bat
AppA/: ClipboardHelper.cpp  ClipboardHelper.h  DDEClient.cpp  DDEServer.cpp  DDEServer.h  MDIFrame.cpp  MDIFrame.h  OA1Window.cpp  OA1Window.h  OA2Window.cpp  OA2Window.h  PipeLauncher.cpp  PipeLauncher.h  TitanicData.cpp  TitanicData.h  main.cpp  resource.h
AppB/: main.cpp  resource.h
